test/files_test/errors/lambda_non_symbol_param.scm
; Test: Lambda with non-symbol parameter - should return exit code 84
(lambda (1 2) (+ 1 2))
